/// Base class for data models.
abstract class DataModel {
  /// Represents the [DataModel] as a json.
  Map<String, dynamic> toJson();
}
